# rust-edu

./: Cargo.toml  README.md
data/: courses.json
src/: main.rs
