[package]
name = "rust-edu"
version = "0.1.0"
authors = ["Tdead1 <32958884+Tdead1@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
uid = "0.1.7"
nannou = "0.19.0"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustflags = ["-Zshare-generics=y"]

[profile.dev.build-override]
opt-level = 3